Almost done with the java builder changes
- how to manage bindings to get types to use in generics?
- also, usage of fields instead of functions is possible, but it's closely related with the first point problem